# EsameHPC

./: .gitignore  CMakeLists.txt  README.md  prova  prova.c
CommonAssignment1/: CMakeLists.txt  README.md  commonAssignment.gplot
CommonAssignment1/include/: dotprod.h
CommonAssignment1/measures/: extract.py  measure.py  measures.bash  measures_log.csv
CommonAssignment1/measures/5Kx5K_3000meas/: measures_log18-20-37.csv  measures_log18-26-48.csv  measures_log18-30-52.csv  measures_log18-33-46.csv  measures_log18-36-10.csv
CommonAssignment1/measures/8Kx8K_3000meas/: measures_log18-51-04.csv  measures_log19-06-42.csv  measures_log19-16-57.csv  measures_log19-24-13.csv  measures_log19-30-14.csv
CommonAssignment1/measures/measure/: SIZE-10000-NTH-0-1617696498.csv  SIZE-10000-NTH-0-1617699907.csv  SIZE-10000-NTH-0-1617707438.csv  SIZE-10000-NTH-0-1617722695.csv  SIZE-10000-NTH-0-1617725186.csv  SIZE-10000-NTH-1-1617699907.csv  SIZE-10000-NTH-1-1617707438.csv  SIZE-10000-NTH-1-1617720081.csv  SIZE-10000-NTH-1-1617722695.csv  SIZE-10000-NTH-2-1617707438.csv  SIZE-10000-NTH-2-1617722695.csv  SIZE-10000-NTH-4-1617699907.csv  SIZE-10000-NTH-4-1617707438.csv  SIZE-10000-NTH-8-1617707438.csv  SIZE-10000-NTH-8-1617720081.csv  SIZE-10000-NTH-8-1617725186.csv  SIZE-10000-NTH-8-1617728348.csv  SIZE-10000x2000-NTH-0-1617780588.csv  SIZE-10000x8000-NTH-2-1617780588.csv  SIZE-10000x8000-NTH-8-1617780588.csv  SIZE-2000-NTH-0-1617696306.csv  SIZE-2000-NTH-0-1617699907.csv  SIZE-2000-NTH-0-1617707320.csv  SIZE-2000-NTH-0-1617707438.csv  SIZE-2000-NTH-1-1617699907.csv  SIZE-2000-NTH-1-1617707438.csv  SIZE-2000-NTH-2-1617699907.csv  SIZE-5000-NTH-0-1617451746.csv  SIZE-5000-NTH-0-1617451918.csv  SIZE-5000-NTH-0-1617451965.csv  SIZE-5000-NTH-0-1617696315.csv  SIZE-5000-NTH-0-1617707320.csv  SIZE-5000-NTH-0-1617707438.csv  SIZE-5000-NTH-1-1617696713.csv  SIZE-5000-NTH-1-1617699907.csv  SIZE-5000-NTH-1-1617707438.csv  SIZE-5000-NTH-1-1617720081.csv  SIZE-5000-NTH-2-1617699907.csv  SIZE-5000-NTH-2-1617720081.csv  SIZE-5000-NTH-2-1617722695.csv  (+27 more)
CommonAssignment1/measures/measure/06-04-5000measures/: SIZE-5000-NTH-0-1617451746.csv  SIZE-5000-NTH-1-1617456682.csv  SIZE-8000-NTH-0-1617453886.csv  SIZE-8000-NTH-4-1617460715.csv
CommonAssignment1/measures/measure/06-04-diff-size-opt-for/: SIZE-10000-NTH-2-1617697253.csv  SIZE-10000-NTH-4-1617697514.csv  SIZE-2000-NTH-2-1617697104.csv  SIZE-2000-NTH-8-1617697632.csv  SIZE-5000-NTH-2-1617697114.csv  SIZE-5000-NTH-8-1617697640.csv
CommonAssignment1/measures/measure/SIZE-10000-O1/: SIZE-10000-NTH-0-O1-1618070642.csv  SIZE-10000-NTH-0-O1-1618128831.csv  SIZE-10000-NTH-0-O1-1618219708.csv  SIZE-10000-NTH-0-O1-1618240552.csv  SIZE-10000-NTH-00-O0-1618577634.csv  SIZE-10000-NTH-00-O1.csv  SIZE-10000-NTH-01-O1-1618577634.csv  SIZE-10000-NTH-01-O1.csv  SIZE-10000-NTH-02-O1-1618577634.csv  SIZE-10000-NTH-02-O1.csv  SIZE-10000-NTH-04-O1.csv  SIZE-10000-NTH-08-O1-1618577634.csv  SIZE-10000-NTH-08-O1.csv  SIZE-10000-NTH-1-O1-1618070642.csv  SIZE-10000-NTH-1-O1-1618128831.csv  SIZE-10000-NTH-1-O1-1618219708.csv  SIZE-10000-NTH-1-O1-1618240552.csv  SIZE-10000-NTH-16-O1-1618577634.csv  SIZE-10000-NTH-16-O1.csv  SIZE-10000-NTH-2-O1-1618070642.csv  SIZE-10000-NTH-2-O1-1618128831.csv  SIZE-10000-NTH-2-O1-1618219708.csv  SIZE-10000-NTH-2-O1-1618240552.csv  SIZE-10000-NTH-32-O1-1618577634.csv  SIZE-10000-NTH-32-O1.csv  SIZE-10000-NTH-4-O1-1618070642.csv  SIZE-10000-NTH-4-O1-1618128831.csv  SIZE-10000-NTH-4-O1-1618219708.csv  SIZE-10000-NTH-4-O1-1618240552.csv  SIZE-10000-NTH-8-O1-1618070642.csv  SIZE-10000-NTH-8-O1-1618128831.csv  SIZE-10000-NTH-8-O1-1618219708.csv  SIZE-10000-NTH-8-O1-1618240552.csv  psize-10000-O1-table.csv  psize-10000-O1-table.html  psize-10000-O1-table.md
CommonAssignment1/measures/measure/SIZE-10000-O2/: SIZE-10000-NTH-0-O2-1618070642.csv  SIZE-10000-NTH-0-O2-1618128831.csv  SIZE-10000-NTH-0-O2-1618219708.csv  SIZE-10000-NTH-0-O2-1618240552.csv  SIZE-10000-NTH-00-O0-1618577634.csv  SIZE-10000-NTH-00-O2.csv  SIZE-10000-NTH-01-O2-1618577634.csv  SIZE-10000-NTH-01-O2.csv  SIZE-10000-NTH-02-O2-1618577634.csv  SIZE-10000-NTH-02-O2.csv  SIZE-10000-NTH-04-O2-1618577634.csv  SIZE-10000-NTH-04-O2.csv  SIZE-10000-NTH-08-O2-1618577634.csv  SIZE-10000-NTH-08-O2.csv  SIZE-10000-NTH-1-O2-1618070642.csv  SIZE-10000-NTH-1-O2-1618128831.csv  SIZE-10000-NTH-1-O2-1618219708.csv  SIZE-10000-NTH-1-O2-1618240552.csv  SIZE-10000-NTH-16-O2-1618577634.csv  SIZE-10000-NTH-16-O2.csv  SIZE-10000-NTH-2-O2-1618070642.csv  SIZE-10000-NTH-32-O2.csv  (+13 more)
CommonAssignment1/plot/: plot.py
CommonAssignment1/src/: dotprod.c  main  main.c  main_no_macro.c
CommonAssignment1/test/: dotprod.c  dotprod.h  measure.py  measure_linux_time.py  measures_log_test.csv  test  test.c  test.py  test_dims.txt
CommonAssignment1/test/5Kx5K_3000meas/: measures_log18-26-48.csv  measures_log18-30-52.csv  measures_log18-33-46.csv  measures_log18-36-10.csv
CommonAssignment1/test/8Kx8K_3000meas/: measures_log19-06-42.csv  measures_log19-16-57.csv  measures_log19-24-13.csv  measures_log19-30-14.csv
CommonAssignmentMPI01/: CMakeLists.txt  README.md
CommonAssignmentMPI01/include/: utils.h
CommonAssignmentMPI01/measures/: extract.py  measures.bash
CommonAssignmentMPI01/src/: initMatrices.c  main.c  main_no_file.c  main_seq.c  main_test.c  utils.c
CommonAssignmentMPI01/test/: matrix_a  matrix_b  test  test.c
GroupAssignmentALL01/: CMakeLists.txt  Pipfile  complexities.gplot  speedup10000.eps
GroupAssignmentALL01/include/: TestLib.h  knn.h  knn_mpi.h  knn_omp.h  point.h  sort.h
GroupAssignmentALL01/measures/: extract.py  measures.bash
GroupAssignmentALL01/measures/mpi/: extract.py  measures.bash
GroupAssignmentALL01/measures/omp/: extract.py  measures.bash
GroupAssignmentALL01/src/: knn.c  knn_mpi.c  knn_omp.c  main  main.c  main_bitonic.c  main_mpi.c  main_omp  main_omp.c  main_omp_bubble  main_omp_diff_sort  main_omp_k_select.c  main_omp_sort_selection.c  point.c  sort.c  test  test.c
GroupAssignmentALL01/test/: SortTest  SortTest.c  TestLib.c  compare_sqrt_algos  compare_sqrt_algos.c
(+913 files in other folders)
